# 3d_islandbridge

./: generate_png.py  getEquistrainFaces.py  get_face_locsDists.py  process_mesh.py  process_strains.py  readme.md
Iter0_Output/: film_vertex_locations_stp0.txt
Iter1_Output/A*Output/: fromWilliam_hemispherePath_iter1.txt
Iter1_Output/HydroOutput/: film_vertex_locations_stp2.txt  film_vertex_locations_stp3.txt  film_vertex_locations_stp33.txt  film_vertex_locations_stp66.txt  film_vertex_locations_stp99.txt
computational_hydrographics/: .gitignore  CMakeLists.txt  face_connections.txt  film_vertex_locations_stp2.txt  film_vertex_locations_stp3.txt  film_vertex_locations_stp33.txt  film_vertex_locations_stp66.txt  film_vertex_locations_stp99.txt  readme.txt
computational_hydrographics/cmake/: FindANTTWEAKBAR.cmake  FindGLFW.cmake  FindLIBIGL.cmake
computational_hydrographics/line_search_results_A/: exp0_0.txt  exp1_0.txt  exp2_0.txt  exp3_0.txt  exp4_0.txt  exp5_0.txt  exp6_0.txt
computational_hydrographics/src/pardiso/: PardisoSolver.cpp  PardisoSolver.h
computational_hydrographics/src/simulation/: Dipping.cpp  Dipping.h  Dipping_serialize.cpp  Dipping_serialize.h  FEM.cpp  FEM.h  main.cpp  utils.cpp  utils.h
